WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316802
AX: WebKit should not stitch text across br-elements
https://bugs.webkit.org/show_bug.cgi?id=316802
Summary
AX: WebKit should not stitch text across br-elements
Tyler Wilcock
Reported
2026-06-10 10:20:53 PDT
data:text/html,Hello%20world!<br/><br/>It's%20me,%20here%20to%20chat.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-10 10:20:59 PDT
<
rdar://problem/179250716
>
Tyler Wilcock
Comment 2
2026-06-11 13:06:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67000
EWS
Comment 3
2026-06-14 17:33:43 PDT
Committed
315199@main
(d6345c1b144b): <
https://commits.webkit.org/315199@main
> Reviewed commits have been landed. Closing PR #67000 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug