AX: WebKit should not stitch text across br-elements https://bugs.webkit.org/show_bug.cgi?id=316802 rdar://179250716

Reviewed by Dominic Mazzoni.

Accessibility text-stitching walks a block flow's inline leaf boxes and
groups adjacent text into a single stitched object. <br> line-break boxes
were never handled, so text on both sides of any number of consecutive
<br>s was stitched together. <br>s typically denote a meaningful separation,
so they should break the stitch instead.

In stitchActionFor(), break and skip when encountering a <br>.

* LayoutTests/accessibility/text-stitching-adjacent-br-elements-expected.txt: Added.
* LayoutTests/accessibility/text-stitching-adjacent-br-elements.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.
* Source/WebCore/accessibility/AXStitchUtilities.cpp:
(WebCore::stitchActionFor):

Canonical link: https://commits.webkit.org/315199@main